# alpha

./: .env.example  .gitignore  ARCHITECTURE_IMPROVEMENT_PLAN.md  AUTO_TRADING_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  Dockerfile.dev  PRODUCTION_RULES.md  README.md  SOLANA_DEPLOYMENT.md  VERSION_INFO.md  alphabot.db  alphabot_signals.db  auto-trading.html  blockchain-client.js  bot-fix.js  bot-runner.js  bot.js  custodial-wallet.js  data-provider.js  debug-positions.html  dexscreener.js  dextools.js  docker-compose.dev.yml  ecosystem-auth.config.cjs  ecosystem-real.config.cjs  ecosystem.config.cjs  index.html  jupiter.js  main_server.js  my-account.html  package.json  position-manager.js  server.js  signals.db  signals.html  start-bot.js  test-entry-mcap.js  transaction_parser.js  (+2 more)
public/: solana-client.js
scripts/: seed-test-data.js
solana-contract/: Cargo.toml
solana-contract/src/: bin.rs  lib.rs
src/: index.tsx
